--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,7 @@ body {
   background-color: #333;
   color: #fff;
   display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
